fixes sidebar spacing

--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -8,7 +8,7 @@
   width: 17vw;
   height: 100vh;
   display: flex;
-  justify-content: left;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   margin: 0;
